Fix breadcrumb alignment

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_general.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_general.scss
@@ -322,10 +322,14 @@ $sidebar__max-width: 300px;
     font-family: $font-family__base;
     font-size: $font-size__base;
     width: auto;
-    vertical-align: middle;
+    vertical-align: baseline;
 
     &:not(:first-of-type) {
       padding-left: $indent__xs;
+    }
+
+    @include min-screen($screen__m) {
+      vertical-align: middle;
     }
   }
 
